[package]
name = "libsqlfs-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
libfuse-sys = "0.3"
rusqlite = {version = "0.26.1"}
snafu = "0.6"

[lib]
name = "sqlfs_rs"
crate-type = ["cdylib", "staticlib"]
